# qhugo

./: .gitignore  CMakeLists.txt  README.md  filecontroller.cpp  filecontroller.h  lspclient.cpp  lspclient.h  main.cpp  markdownhighlighter.cpp  markdownhighlighter.h
.github/workflows/: release.yml
backend/: backend.go  backend.h  go.mod
backend/lsp/: client.go  debug.go  manager.go  protocol.go
qml/: Editor.qml  FuzzyFinder.qml  Main.qml  Sidebar.qml
